<resources>
    <string name="app_name">Look at Net</string>
    <string name="tab_text_local">Home</string>
    <string name="tab_text_remote">Remote</string>
    <string name="tab_text_places">Places</string>
    <string name="tab_text_log">Log</string>
    <string name="title_activity_maps">Access point map</string>
    <string name="nav_header_title">Look at Net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="db_tools">Access points</string>
    <string name="log_view">Log view</string>
    <string name="settings">Settings</string>
    <string name="action_backup">Backup</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Refresh</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_delete">Delete</string>
    <string name="action_satellite_mode">Satellite mode</string>
    <string name="action_scheme_mode">Normal mode</string>
    <string name="action_hybrid_mode">Hybrid mode</string>
    <string name="action_show_settings">Map mode</string>
    <string name="action_show_on_map">Choose map show mode</string>
    <string name="action_list">Show list of hosts</string>
    <string name="action_read">Read previous log</string>
    <string name="action_select">Select all</string>
    <string name="action_setup">Setup</string>
    <string name="action_add_new_smb_server">Add new SMB server</string>
    <string name="action_edit_smb_server">Edit SMB server</string>
    <string name="enter_server_name">Enter server name</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="enter_point_snippet">Enter point marker snippet</string>
    <string name="enter_point_title">Enter point marker title</string>



    <string name="menu_main">Files</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_db_view">Places</string>
    <string name="menu_log_view">Log view</string>
    <string name="menu_map_settings">Choose map mode</string>
    <string name="menu_location_settings">Choose location mode</string>
    <string name="menu_network_mode">Network mode</string>
    <string name="menu_gps_mode">Gps mode</string>
    <string name="menu_exit">Exit</string>

    <string name="confirm_message">This will permanently delete folder</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dialog_login_title">Enter login and password</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_pass">Enter password</string>
    <string name="dialog_add_title">Enter server name, adddress, login and passsword</string>
    <string name="dialog_add_point_title">Enter marker name and snipped</string>
    <string name="dialog_edit_point_title">Edit point arguments</string>

    <string name="folder_object">folder</string>
    <string name="enter_name">Enter name</string>
    <string name="exit">Exit</string>
    <string name="extractto">Extract to</string>
    <string name="extractionsuccess">Package successfully extracted</string>
    <string name="for_time"> for</string>
    <string name="filecreated">File was created.</string>
    <string name="fileexists">File already exists.</string>
    <string name="files">" Files"</string>
    <string name="_files">\u0020file(s)</string>
    <string name="filewasrenamed">File was renamed</string>
    <string name="found_hosts">Found remote devices:</string>
    <string name="unzipping">Extracting</string>
    <string name="no_hosts">No hosts</string>
    <string name="no_nets">No networks</string>
    <string name="cantopenfile">Cannot open this file</string>
    <string name="cantreadfolder">Cannot read folder due to permissions</string>
    <string name="cantrefresh">Wi-Fi connection is down!</string>
    <string name="cantlocation">Location disabled!</string>
    <string name="copiedtoclipboard">Copied to clipboard</string>
    <string name="time_ms">msec.</string>
    <string name="time_s">sec.</string>
    <string name="time_min">min.</string>

    <!-- permissions -->
    <string name="permissions">Permissions</string>
    <string name="owner">Owner:</string>
    <string name="group">Group:</string>
    <string name="others">Other:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="execute">Execute</string>
    <string name="permissionschanged">Permissions changed</string>
    <string name="message_denied">Permission \"%1$s\" has been denied</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="point_title">title</string>
    <string name="point_snippet">snippet</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="action_start_tracking">Start tracking</string>
    <string name="action_stop_tracking">Stop tracking</string>
    <string name="property">Property</string>
    <string name="map_mode_setting">Map mode settings</string>
    <string name="list_mode">List Mode</string>
    <string name="menu_image_view">menu image view</string>
</resources>