<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/action_settings"
            android:title="@string/menu_location_settings"
            android:icon="@drawable/baseline_place_yellow_24"
            app:showAsAction="ifRoom|withText"
            tools:ignore="DuplicateIds">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/network_mode"
                        android:orderInCategory="97"
                        android:title="@string/menu_network_mode"
                        android:checked="false"
                        app:showAsAction="never"/>
                    <item android:id="@+id/gps_mode"
                        android:orderInCategory="96"
                        android:title="@string/menu_gps_mode"
                        android:checked="false"
                        app:showAsAction="never"/>
                </group>
            </menu>
        </item>
    </menu>

