<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_local">
    <fragment
        android:id="@+id/nav_local"
        android:name="com.netmontools.lookatnet.ui.local.view.LocalFragment"
        android:label="Local files"
        tools:layout="@layout/fragment_local" >
        <action
            android:id="@+id/action_nav_local_to_nav_image"
            app:destination="@id/nav_image" />
    </fragment>

    <fragment
        android:id="@+id/nav_image"
        android:name="com.netmontools.lookatnet.ui.local.view.ImageFragment"
        android:label="@string/menu_image_view"
        tools:layout="@layout/fragment_log" >
        <action
            android:id="@+id/action_nav_image_to_nav_local"
            app:destination="@id/nav_local" />
    </fragment>


    <fragment
        android:id="@+id/nav_remote"
        android:name="com.netmontools.lookatnet.ui.remote.view.FilesFragment"
        android:label="Remote files"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/nav_places"
        android:name="com.netmontools.lookatnet.ui.point.view.PointFragment"
        android:label="@string/menu_db_view"
        tools:layout="@layout/fragment_point" />

    <fragment
        android:id="@+id/nav_log"
        android:name="com.netmontools.lookatnet.ui.log_view.LogFragment"
        android:label="@string/menu_log_view"
        tools:layout="@layout/fragment_log" />
</navigation>